# ChangeLog for schedule

*schedule-0.15:
	Martin Väth <martin at mvath.de>:
	- Introduce encryption: --password --passfile

*schedule-0.14:
	Martin Väth <martin at mvath.de>:
	- Support CWD; introduce --nodir
	- Support HOSTTEXT (default to uname -m); introduce --nohost
	- Improve zsh completion

*schedule-0.13:
	Martin Väth <martin at mvath.de>:
	- Fix zsh completion

*schedule-0.12:
	Martin Väth <martin at mvath.de>:
	- Introduce --no-user --no-command to customize list output

*schedule-0.11:
	Martin Väth <martin at mvath.de>:
	- Support for colored ouput (if Term::ANSIColor is available)
	- Try to set process name more appropriately

*schedule-0.10:
	Martin Väth <martin at mvath.de>:
	- Add --ok, --finished, --started to start-or-queue
	- Add query commands: ok, finished, started
	- Add [user@host] to job listing
	- Fix crash in signal handling (regression from 0.8)
	- Fix crash with -l (regression from 0.8)
	- Fix interpretation/checking of job numbers/ranges in some cases
	- Use serverid so that orphant jobs cannot confuse a restarted server
	- Improve message of schedule -l if server cannot be found
	- README: First example with unqueued shutdown command

*schedule-0.9:
	Martin Väth <martin at mvath.de>:
	- Introduce start-or-queue and even recommend its usage by mentioning
	  it in the main examples

*schedule-0.8:
	Martin Väth <martin at mvath.de>:
	- Allow unquoted environment variables inside environment variables
	- Use library for common functions, putting connection data to a class

*schedule-0.7:
	Martin Väth <martin at mvath.de>:
	- Do not allow permutation of options with arguments:
	  This simplifies passing options to commands or negative job numbers

*schedule-0.6:
	Martin Väth <martin at mvath.de>:
	- Fix bug in signal handling: cancel always correct job
	- Fix exit status of some commands like "schedule run"
	- Let 0 be the last job (instead of last job + 1) for
	  certain commands (run, bg, wait, cancel, list, status)