@@ -21,7 +21,7 @@ if(($FindBin::Bin // '') ne '') {
 }
 use Schedule::Helpers qw(/./);
 use Schedule::Connect;
-my $s = Schedule::Connect->new('schedule', '0.15');
+my $s = Schedule::Connect->new('schedule', '1.0');
 
 =head1 NAME
 
