@@ -21,7 +21,7 @@ if(($FindBin::Bin // '') ne '') {
 }
 use Schedule::Helpers qw(/./);
 use Schedule::Connect;
-my $s = Schedule::Connect->new('schedule-server', '0.15');
+my $s = Schedule::Connect->new('schedule-server', '1.0');
 
 =head1 NAME
 
@@ -541,8 +541,7 @@ sub index_from_unique {
 sub unique_indices {
 	my %have = ();
 	my @ret = ();
-	my $ind = (shift() // '');
-	for my $name (split(' ', $_[0])) {
+	for my $name (split(' ', ($_[0] // ''))) {
 		if($name =~ m{^(\d*)\:(\d*)$}) {
 			my $i = (($1 eq '') ? 1 : $1);
 			my $end = &my_index($2, 0);
